[package]
name = "overpunch"
version = "0.3.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "support for signed overpunch numbers"
homepage = "https://github.com/capitalrx/overpunch"
repository = "https://github.com/capitalrx/overpunch"
keywords = ["overpunch", "cobol", "ibm", "mainframe"]
categories = ["finance", "parsing", "value-formatting"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.36.0"
thiserror = "2.0.0"
memchr = "2.7.4"

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
